--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/ujs": "^7.0.3-1",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "ignore-loader": "^0.1.2",
     "jest": "^28.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
